# pill_checker

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  API_STRUCTURE_CORRECTION.md  BIOMED_NER_INTEGRATION.md  Makefile  README.md  README_RUN_CONFIGURATION.md  README_low_level.md  SUPABASE_REMOVAL_GUIDE.md  digest.txt  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  run_tests.sh
.github/workflows/: make-images.yml  pre-commit.yml  run-tests.yml  service-deploy.yml
MedsRecognition/: settings.py  views.py
core/: README.md  project_docs.md
core/app/: main.py
core/app/api/v1/: auth.py  medications.py
core/app/core/: database.py  events.py
core/app/models/: base.py  medication.py
core/app/schemas/: base.py  medication.py  profile.py
core/app/services/: auth_service.py  biomed_ner_client.py  ocr_service.py  session_service.py
core/migrations/: env.py
core/migrations/versions/: rls_policies.py
core/tests/: conftest.py  test_auth.py  test_models.py  test_ocr_service.py  test_schemas.py  test_sessions.py
docker/: Dockerfile  docker-compose.yml
docs/: index.html
migrations/: env.py
migrations/versions/: add_users_table_and_update_profiles.py  initial_schema.py  rls_policies.py
model/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile_local  Makefile  README.md  __init__.py  digest.txt  docker-compose.yml  lightweight_transformer.py  main.py  pyproject.toml  pytest.ini
model/scripts/: lint.sh  test.sh
model/src/medical_ner/: lightweight_transformer.py  main.py
model/src/medical_ner/api/: models.py  router.py
model/src/medical_ner/core/: config.py  logging.py
model/src/medical_ner/services/: linker.py  nlp.py
model/tests/: conftest.py  test_api.py  test_linker.py  test_main.py  test_nlp.py
src/pill_checker/: main.py
src/pill_checker/api/v1/: auth.py  dependencies.py  medications.py
src/pill_checker/core/: config.py  events.py  logging_config.py  security.py
src/pill_checker/models/: __init__.py  medication.py  profile.py  user.py
src/pill_checker/schemas/: __init__.py  medication.py  user.py
src/pill_checker/scripts/: README.md  generate_test_credentials.py
src/pill_checker/services/: auth.py  auth_manager.py  biomed_ner_client.py  medication_processing.py  ocr.py  profile_service.py  session_service.py  storage.py
src/pill_checker/templates/: base.html
supabase/: config.toml
testClient/: index.html  index.js
tests/: conftest.py  test_models.py  test_ocr_service.py  test_schemas.py
tests/api/: test_medication_upload.py  test_sessions.py
tests/models/: test_models.py
tests/schemas/: test_schemas.py
tests/services/: test_auth.py  test_biomed_ner_client.py  test_medication_processing.py  test_ocr_service.py
tests/test_utils/: test_create_test_image.py
