[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pill_checker"
version = "1.0.0"
description = "A medication interaction checker app"
readme = "README.md"
authors = [
    {name = "Svetlana Perekrestova", email = "svetlana.perekrestova2@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=0.7.0",
    "alembic>=1.7.1",
    "asyncpg>=0.27.0",
    "autopep8>=2.3.2",
    "bcrypt>=4.0.0",
    "black>=25.1.0",
    "easyocr>=1.7.0",
    "email-validator>=2.0.0",
    "fastapi>=0.68.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "itsdangerous>=2.0.0",
    "jinja2>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.5",
    "requests>=2.26.0",
    "slowapi>=0.1.4",
    "sqlalchemy[asyncio]>=1.4.23",
    "starlette>=0.14.2",
    "tenacity>=8.0.1",
    "urllib3<2.0.0",
    "uvicorn[standard]>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pylint>=3.3.4",
    "ruff>=0.9.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pill_checker"]

[tool.setuptools.package-data]
pill_checker = ["static/**/*", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
markers = [
    "ocr: tests that use the real OCR service (may be slow)"
]
